Linkki Airbnb-hintaennustimen alkuperäiseen versioon lisätty

--- a/koodiesimerkit/airbnb/predict_airbnb_price.ipynb
+++ b/koodiesimerkit/airbnb/predict_airbnb_price.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This is a revised copy of the [Airbnb price predictor](https://mapr.com/blog/predicting-airbnb-listing-prices-scikit-learn-and-apache-spark/) by Nick Amato. Thank you Nick for sharing such a valuable example on real-life machine learning."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Overview:  Predicting Listing Prices on Airbnb with Spark and Scikit-Learn\n",
     "\n",
     "One of the most useful things to do with machine learning is inform assumptions about customer behaviors. This has a wide variety of applications: everything from helping customers make superior choices (and often, more profitable ones), making them contagiously happy about your business, and building loyalty over time. Increasingly, it's not enough to simply let your customers pick and choose from the products and services options offered. Customers expect intelligent recommendations and for you to chart courses of action with minimal room for ambiguity or misinterpretation.\n",
